--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="container">
         <div class="row">
             <div class="col-12 col-lg-8">
-                <a href="https://venomdevelop.github.io/VenomFlow/">
-                    <img src="https://raw.githubusercontent.com/VenomDevelop/VenomFlow/master/Tokū%20beta%20black%20logo%20small.png" width="133" height="45" alt="Tokū Beta Logo" /></a>
+                <a href="https://venomdevelop.github.io/toku/">
+                    <img src="https://github.com/VenomDevelop/toku/blob/main/Toku%CC%84%20beta%20black%20logo%20small.png?raw=true" /></a>
             </div>
 
             <div id="tigerface" class="col-12 col-lg-4">
